Weather on/off update
Weather on/off update

--- a/scenarios/08_Siege.cfg
+++ b/scenarios/08_Siege.cfg
@@ -198,8 +198,6 @@
                 ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png:", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
 				>> 
         [/lua]
-		        #--rain heavy
-                #ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_heavy/00[01~20].png:", Center_X=80, Center_Y=120, Area_Radius=25, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})                        
 
         [sound_source]
             id=rain_light
@@ -213,18 +211,6 @@
             check_shrouded=false
             x,y=24,21
         [/sound_source]
-        #[sound_source]
-        #    id=rain_heavy
-        #    sounds="data/add-ons/Forgotten_Legacy/sounds/rain_heavy.wav"
-        #    loop=-1
-        #    full_range=23
-        #    fade_range=10
-        #    chance=100
-        #    delay=0
-        #    check_fogged=false
-        #    check_shrouded=false
-        #    x,y=80,120
-        #[/sound_source]
 		
 		### Swamp hurts set up
 		{PLACE_IMAGE scenery/rune1.png 23 32}
@@ -292,6 +278,66 @@
         {RECALL_IKMASS 30 20 no}
         {RECALL_ELHIS 32 22 no}
 		
+		##########	Context menu for activating or deactivating the raining effect objectives	##########
+		[set_variable]
+			name=rainoff
+			value=true
+		[/set_variable]
+		[set_menu_item]
+			id=offrain
+			description=  _ "Turns off the raining effect"
+			[show_if]
+				[variable]
+					name=rainoff
+					contains=yes
+				[/variable]
+			[/show_if]
+			[command]
+				[set_variable]
+					name=rainon
+					value=true
+				[/set_variable]
+				[set_variable]
+					name=rainoff
+					value=false
+				[/set_variable]
+				[lua] 
+					code=<<  
+							
+						--rain light
+						ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png:", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=true, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
+						>> 
+				[/lua]				
+			[/command]
+		[/set_menu_item]
+		[set_menu_item]
+			id=rainon
+			description= _ "Turns on the raining effect"
+			[show_if]
+				[variable]
+					name=rainon
+					contains=yes
+				[/variable]
+			[/show_if]
+			[command]
+				[set_variable]
+					name=rainon
+					value=false
+				[/set_variable]
+				[set_variable]
+					name=rainoff
+					value=true
+				[/set_variable]	
+				[lua] 
+					code=<<  
+							
+						--rain light
+						ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png:", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
+						>> 
+				[/lua]
+			[/command]
+		[/set_menu_item]
+		
 		[message]
 			speaker=narrator
 			message= _ "Do you wanna take control of the Naga?"
@@ -342,6 +388,7 @@
 			{OBJECTIVE_NOTE (_"If you put magic users on all 4 runes, the swamps will turn hostile to all your enemies.")}
 			{OBJECTIVE_NOTE (_"The accumulated levels of the magic users on the runes defines the damage of the swamp tiles.")}
 			{OBJECTIVE_NOTE (_"Lvl 1 units increase the dmg by 1, lvl 2 by 4 and lvl 3 by 9.")}
+			{OBJECTIVE_NOTE (_"You can turn on/off the rain via right click.")}
 			{IS_LAST_SCENARIO}
         [/objectives]
 		
