--- a/scenarios/08_Siege.cfg
+++ b/scenarios/08_Siege.cfg
@@ -195,7 +195,7 @@
             code=<<  
                     
                 --rain light
-                ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png:", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
+                ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png~O(50%):", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
 				>> 
         [/lua]
 
@@ -305,7 +305,7 @@
 					code=<<  
 							
 						--rain light
-						ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png:", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=true, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
+						ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png~O(50%):", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=true, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
 						>> 
 				[/lua]				
 			[/command]
@@ -332,7 +332,7 @@
 					code=<<  
 							
 						--rain light
-						ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png:", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
+						ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png~O(50%):", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
 						>> 
 				[/lua]
 			[/command]
@@ -405,14 +405,19 @@
 
 		{SPEAK ("S'Saskin the Bloodborn") ( _"Blizzards! They got more orcs as I thought.")}
 		{SPEAK (Iktha Toskh) ( _"Bloodborn, the defensive measures of my witch doctors are ready. We placed 4 runes into the swamp, I'll show you.")}
-		{SCROLL_TO 23 32}
-		{DELAY 2000}
-		{SCROLL_TO 42 22}
-		{DELAY 2000}
-		{SCROLL_TO 39 41}
-		{DELAY 2000}
-		{SCROLL_TO 26 20}
-		{DELAY 2000}
+		
+		{HIGHLIGHT_IMAGE 23 32 scenery/rune1.png ()}
+		#{SCROLL_TO 23 32}
+		#{DELAY 2000}
+		{HIGHLIGHT_IMAGE 42 22 scenery/rune2.png ()}
+		#{SCROLL_TO 42 22}
+		#{DELAY 2000}
+		{HIGHLIGHT_IMAGE 39 41 scenery/rune3.png ()}
+		#{SCROLL_TO 39 41}
+		#{DELAY 2000}
+		{HIGHLIGHT_IMAGE 26 20 scenery/rune4.png ()}
+		#{SCROLL_TO 26 20}
+		#{DELAY 2000}
 		{SPEAK ("S'Saskin the Bloodborn") ( _"Great. What are they doing?")}		
 		{SPEAK (Iktha Toskh) ( _"Glad you asked, Bloodborn. If we put a magic caster on each of them, they will make the swamps hostile to our enemy. If we put stronger casters on them, the effect will be stronger.")}
 		{SPEAK (Ikmass) ( _"Easy pickings, love it. Slay-slay them all! Bloodborn, I have a suggestion too. May I speak-speak?")}
@@ -752,7 +757,7 @@
             code=<<  
                     
                 --rain light
-                ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png:", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
+                ToA_Weather({Weather_Str="data/add-ons/Forgotten_Legacy/images/weather/rain_light/00[01~20].png~O(50%):", Center_X=24, Center_Y=21, Area_Radius=34, Min_Ms_Per_Frame=60, Max_Ms_Per_Frame=75, Intensity=1, Remove=false, Stationary_Str=false, Stationary_Duration_Multiplier=false})        
 				>> 
         [/lua]
 	[/event]
